1.2.12 CSS Fixes: -'sl_info_bubble' ID to set font-size of text to 1em -styling: left and right justified link in credits footer -added 'get themes' link next to themes dropdown in map designer -extra space between km/miles selection and update button on api-key page
git-svn-id: https://plugins.svn.wordpress.org/store-locator/trunk@93911 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/store-locator.css
+++ b/store-locator.css
@@ -18,6 +18,7 @@
 	/*padding:0px;*/
 }
 #sl_div #map { color:black; font-weight:normal;}
+#sl_info_bubble { padding:10px; /* max-width:500px; max-height:400px; */ font-size:1em;}
 #map_sidebar { background-color:white; font-weight:normal;}
 #addressInput {
 	border:solid 1px silver;
